ConvexOptimization/UMFPACK/UMFPACK/Debug/UMFPACK.log
Build started 10/17/2012 10:00:34 AM.
     1>Project "K:\KL\Packages\ConvexOptimization\UMFPACK\UMFPACK\UMFPACK.vcxproj" on node 2 (rebuild target(s)).
     1>InitializeBuildStatus:
         Creating "Debug\UMFPACK.unsuccessfulbuild" because "AlwaysCreate" was specified.
       MessageBuildingWithCompiler:
         Building with Intel(R) C++ Compiler XE 12.1
       ClCompile:
         ***** ClCompile (Win32 - Intel C++)
         C:\Program Files (x86)\Intel\Composer XE 2011 SP1\bin\ia32\icl.exe /c /Qvc10 /Qlocation,link,"$(VCInstallDir)\bin" /I"C:\KL\Packages\ConvexOptimization\SuiteSparse-3.4.0\SuiteSparse\UFconfig" /I"C:\KL\Packages\ConvexOptimization\SuiteSparse-3.4.0\SuiteSparse\UMFPACK\Include" /I"C:\KL\Packages\ConvexOptimization\SuiteSparse-3.4.0\SuiteSparse\AMD\Include" /ZI /nologo /W3 /Od /Qftz- /D WIN32 /D _DEBUG /D _LIB /D _UNICODE /D UNICODE /EHsc /RTC1 /MDd /GS /fp:precise /Zc:wchar_t /Zc:forScope /Fo"Debug\\" /Fd"Debug\vc100.pdb" /Gd /TC ..\Source\umf_2by2.c ..\Source\umf_analyze.c ..\Source\umf_apply_order.c ..\Source\umf_assemble.c ..\Source\umf_blas3_update.c ..\Source\umf_build_tuples.c ..\Source\umf_colamd.c ..\Source\umf_create_element.c ..\Source\umf_dump.c ..\Source\umf_extend_front.c ..\Source\umf_free.c ..\Source\umf_fsize.c ..\Source\umf_garbage_collection.c ..\Source\umf_get_memory.c ..\Source\umf_grow_front.c ..\Source\umf_init_front.c ..\Source\umf_is_permutation.c ..\Source\umf_kernel.c ..\Source\umf_kernel_init.c ..\Source\umf_kernel_wrapup.c ..\Source\umf_local_search.c ..\Source\umf_lsolve.c ..\Source\umf_ltsolve.c ..\Source\umf_malloc.c ..\Source\umf_mem_alloc_element.c ..\Source\umf_mem_alloc_head_block.c ..\Source\umf_mem_alloc_tail_block.c ..\Source\umf_mem_free_tail_block.c ..\Source\umf_mem_init_memoryspace.c ..\Source\umf_multicompile.c ..\Source\umf_realloc.c ..\Source\umf_report_perm.c ..\Source\umf_report_vector.c ..\Source\umf_row_search.c ..\Source\umf_scale.c ..\Source\umf_scale_column.c ..\Source\umf_set_stats.c ..\Source\umf_singletons.c ..\Source\umf_solve.c ..\Source\umf_start_front.c ..\Source\umf_store_lu.c ..\Source\umf_symbolic_usage.c ..\Source\umf_transpose.c ..\Source\umf_triplet.c ..\Source\umf_tuple_lengths.c ..\Source\umf_usolve.c ..\Source\umf_utsolve.c ..\Source\umf_valid_numeric.c ..\Source\umf_valid_symbolic.c ..\Source\umfpack_col_to_triplet.c ..\Source\umfpack_defaults.c ..\Source\umfpack_free_numeric.c ..\Source\umfpack_free_symbolic.c ..\Source\umfpack_get_determinant.c ..\Source\umfpack_get_lunz.c ..\Source\umfpack_get_numeric.c ..\Source\umfpack_get_symbolic.c ..\Source\umfpack_global.c ..\Source\umfpack_load_numeric.c ..\Source\umfpack_load_symbolic.c ..\Source\umfpack_numeric.c ..\Source\umfpack_qsymbolic.c ..\Source\umfpack_report_control.c ..\Source\umfpack_report_info.c ..\Source\umfpack_report_matrix.c ..\Source\umfpack_report_numeric.c ..\Source\umfpack_report_perm.c ..\Source\umfpack_report_status.c ..\Source\umfpack_report_symbolic.c ..\Source\umfpack_report_triplet.c ..\Source\umfpack_report_vector.c ..\Source\umfpack_save_numeric.c ..\Source\umfpack_save_symbolic.c ..\Source\umfpack_scale.c ..\Source\umfpack_solve.c ..\Source\umfpack_symbolic.c ..\Source\umfpack_tictoc.c ..\Source\umfpack_timer.c ..\Source\umfpack_transpose.c ..\Source\umfpack_triplet_to_col.c
         umf_2by2.c
         umf_analyze.c
     1>..\Source\umf_internal.h(93): error : cannot open source file "amd_internal.h"
           #include "amd_internal.h"
                                    ^
         
     1>Done Building Project "K:\KL\Packages\ConvexOptimization\UMFPACK\UMFPACK\UMFPACK.vcxproj" (rebuild target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:00.26
